--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -1,4 +1,14 @@
-@article{ahmadi2019,
+@inproceedings{ahmadi2019a,
+	title={Sensor tying, optimal montages for {VEP}-based {BCI}},
+	author={Ahmadi, Sara and Borhanazad, Marzieh and Tump, Danielle and Farquhar, Jason and Desain, Peter},
+	booktitle={{8th Graz Brain-Computer Interface Conference 2019}},
+	year={2019},
+	pages={27--31},
+	doi = {10.3217/978-3-85125-682-6-06},
+	url = {https://doi.org/10.3217/978-3-85125-682-6-06}
+}
+
+@article{ahmadi2019b,
 title={Low channel count montages using sensor tying for {VEP}-based {BCI}},
 author={Ahmadi, Sara and Borhanazad, Marzieh and Tump, Danielle and Farquhar, Jason and Desain, Peter},
 journal={Journal of Neural Engineering},
@@ -163,6 +173,7 @@ title={The effect of high and low frequencies in {c-VEP BCI}.},
 author={Borhanazad, Marzieh and Thielen, Jordy and Farquhar, Jason and Desain, Peter},
 booktitle={{8th Graz Brain-Computer Interface Conference 2019}},
 year={2019},
+pages={128--132},
 doi = {10.3217/978-3-85125-682-6-24},
 url = {https://doi.org/10.3217/978-3-85125-682-6-24}
 }
@@ -905,6 +916,7 @@ title={Random visual evoked potentials ({rVEP}) for brain-computer interface ({B
 author={Nagel, Sebastian and Rosenstiel, Wolfgang and Sp{\"u}ler, Martin},
 booktitle={{7th Graz Brain-Computer Interface Conference 2017}},
 year={2017},
+pages={349--354},
 doi = {10.3217/978-3-85125-533-1-64},
 url = {https://doi.org/10.3217/978-3-85125-533-1-64}
 }
@@ -992,6 +1004,7 @@ title={Towards gaze-independent {c-VEP} {BCI}: A pilot study},
 author={Narayanan, S and Ahmadi, S and Desain, P and Thielen, J},
 booktitle={{9th Graz Brain-Computer Interface Conference 2024}},
 year={2024},
+pages={343--348},
 doi = {10.3217/978-3-99161-014-4-060},
 url = {https://doi.org/10.3217/978-3-99161-014-4-060}
 }
@@ -1156,6 +1169,7 @@ title={Towards auditory attention decoding with noise-tagging: A pilot study},
 author={Scheppink, HA and Ahmadi, S and Desain, P and Tangermann, M and Thielen, J},
 booktitle={{9th Graz Brain-Computer Interface Conference 2024}},
 year={2024},
+pages={337--342}
 doi={10.3217/978-3-99161-014-4-059},
 url={https://doi.org/10.3217/978-3-99161-014-4-059}
 }
@@ -1430,6 +1444,7 @@ title={Exploring new territory: Calibration-free decoding for {c-VEP} {BCI}},
 author={Thielen, J and Sosulski, J and Tangermann, M},
 booktitle={{9th Graz Brain-Computer Interface Conference 2024}},
 year={2024},
+pages={325--330},
 doi={10.3217/978-3-99161-014-4-057},
 url={https://doi.org/10.3217/978-3-99161-014-4-057}
 }
