--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -214,7 +214,8 @@
 		\midrule
 		\citeauthor{ahmadi2019dataset1} & dataset & modulated Gold codes & & \\
 		\citeauthor{ahmadi2019dataset2} & dataset & modulated Gold codes & & \\
-		\citeauthor{ahmadi2019} & article & modulated Gold codes & \acrshort{cca} & Number of electrodes, montage \\
+		\citeauthor{ahmadi2019a} & proceedings & modulated Gold codes & \acrshort{cca} & Number of electrodes, montage \\
+		\citeauthor{ahmadi2019b} & article & modulated Gold codes & \acrshort{cca} & Number of electrodes, montage \\
 		\citeauthor{basaklar2019} & article & m-sequence & \acrshort{cca} & Presentation rate (60, 120, 240 Hz) \\
 		\citeauthor{borhanazad2019} & proceedings & modulated Gold codes & \acrshort{cca} & Presentation rate (40, 60, 90, 120 Hz) \\
 		\citeauthor{desain2019} & patent & modulated Gold codes & \acrshort{cca} & \\
