--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -1354,7 +1354,7 @@ url = {https://doi.org/10.3217/978-3-85125-467-9-34}
 
 @incollection{thielen2017,
 title={Re(con)volution: Accurate response prediction for broad-band evoked potentials-based brain computer interfaces},
-author={Thielen, J and Marsman, P and Farquhar, J and Desain, P},
+author={Thielen, Jordy and Marsman, Pieter and Farquhar, Jason and Desain, Peter},
 booktitle={{Brain-Computer Interface Research}},
 pages={35--42},
 year={2017},
@@ -1413,7 +1413,7 @@ url = {https://doi.org/10.34973/9txv-z787}
 
 @inproceedings{thielen2024,
 title={Exploring new territory: Calibration-free decoding for {c-VEP} {BCI}},
-author={Thielen, J and Sosulski, J and Tangermann, M},
+author={Thielen, Jordy and Sosulski, Jan and Tangermann, Michael},
 booktitle={{9th Graz Brain-Computer Interface Conference 2024}},
 year={2024},
 doi={10.3217/978-3-99161-014-4-057},
@@ -1430,7 +1430,7 @@ doi = {10.34973/1ecz-1232},
 url = {https://doi.org/10.34973/1ecz-1232}
 }
 
-@article{thielen2025,
+@article{thielen2025a,
 	title={Towards an {sEEG}-based {BCI} using code-modulated {VEP}: A case study showing the influence of electrode location on decoding efficiency},
 	author={Thielen, Jordy and Tangermann, Michael and Aarnoutse, Erik J and Ramsey, Nick F and Vansteensel, Mariska J},
 	journal={Clinical neurophysiology: official journal of the International Federation of Clinical Neurophysiology},
@@ -1439,6 +1439,25 @@ url = {https://doi.org/10.34973/1ecz-1232}
 	year={2025},
 	doi={10.1016/j.clinph.2025.03.034},
 	url={https://doi.org/10.1016/j.clinph.2025.03.034}
+}
+
+@article{thielen2025b,
+	title={{Addressing BCI inefficiency in c-VEP-based BCIs: A comprehensive study of neurophysiological predictors, binary stimulus sequences, and user comfort}},
+	author={Thielen, Jordy},
+	journal={Biomedical Physics \& Engineering Express},
+	year={2025},
+	doi={10.1088/2057-1976/ade316}
+	url={https://doi.org/10.1088/2057-1976/ade316}
+}
+
+@dataset{thielen2025dataset,
+	author = {Thielen, Jordy},
+	title = {{Binary stimulus sequences for brain-computer interfaces (BCI) using the code-modulated-visual evoked potential (c-VEP)}},
+	year = {2025},
+	publisher = {Radboud University},
+	version = {1},
+	doi = {10.34973/6dw9-0924},
+	url = {https://doi.org/10.34973/6dw9-0924}
 }
 
 @article{torres2021,
