--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -90,7 +90,9 @@
 		\citeauthor{martinezcagigal2025a} & article &  &  & Editorial \acrshort{cvep} \\
 		\citeauthor{martinezcagigal2025b} & proceedings &  m-sequence & \acrshort{cca} & Asynchronous, early stopping \\
 		\citeauthor{santamaria2025} & proceedings & & & Calibration-free, deep learning \\
-		\citeauthor{thielen2025} & article & modulated Gold codes & reconvolution, \acrshort{cca} & Implanted, invasive, \acrshort{seeg} \\
+		\citeauthor{thielen2025a} & article & modulated Gold codes & reconvolution, \acrshort{cca} & Implanted, invasive, \acrshort{seeg} \\
+		\citeauthor{thielen2025b} & article & m-sequence, de Bruijn sequence, Golay sequence, Gold sequence, Gold code set, modulated & reconvolution, \acrshort{cca} & BCI inefficiency, performance predictors, binary stimulus sequences \\
+		\citeauthor{thielen2025dataset} & dataset & m-sequence, de Bruijn sequence, Golay sequence, Gold sequence, Gold code set, modulated & & Binary stimulus sequences, EEG, ECG, SART, resting-state \\
 		\bottomrule
 	\end{tabular}
 \end{table}
