--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -1374,6 +1374,13 @@ doi = {10.1016/0745-7138(92)90045-7},
 url = {https://doi.org/10.1016/0745-7138(92)90045-7}
 }
 
+@article{tangermann2025,
+title={Learning from Small Datasets--Review of Workshop 6 of the 10th International {BCI} Meeting 2023},
+author={Tangermann, Michael and Chevallier, Sylvain and Dold, Matthias and Guetschel, Pierre and Kobler, Reinmar and Papadopoulo, Theodore and Thielen, Jordy},
+journal={Journal of Neural Engineering},
+year={2025}
+}
+
 @article{thielen2015,
 title={Broad-Band visually evoked potentials: re(con)volution in brain-computer interfacing},
 author={Thielen, Jordy and van den Broek, Philip and Farquhar, Jason and Desain, Peter},
