--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -94,6 +94,7 @@
 		\citeauthor{martinezcagigal2025a} & article &  &  & Editorial \acrshort{cvep} \\
 		\citeauthor{martinezcagigal2025b} & proceedings &  m-sequence & \acrshort{cca} & asynchronous, early stopping \\
 		\citeauthor{santamaria2025} & proceedings & & & calibration-free, deep learning \\
+		\citeauthor{tangermann2025} & article & & & review learning from small datasets \\
 		\citeauthor{thielen2025a} & article & modulated Gold codes & reconvolution, \acrshort{cca} & implanted, invasive, \acrshort{seeg} \\
 		\citeauthor{thielen2025b} & article & m-sequence, de Bruijn sequence, Golay sequence, Gold sequence, Gold code set, modulated & reconvolution, \acrshort{cca} & BCI inefficiency, performance predictors, binary stimulus sequences \\
 		\citeauthor{thielen2025dataset} & dataset & m-sequence, de Bruijn sequence, Golay sequence, Gold sequence, Gold code set, modulated & & binary stimulus sequences, \acrshort{eeg}, \acrshort{ecg}, \acrshort{sart}, resting-state \\
