add moreno-calderon 2025

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -924,6 +924,18 @@ doi = {10.3389/fnhum.2023.1227727},
 url = {https://doi.org/10.3389/fnhum.2023.1227727}
 }
 
+@article{moreno2025,
+	title = {Toward the integration of mixed reality and brain-computer interfaces based on code-modulated visual evoked potentials},
+	author = {Selene Moreno-Calderón and Víctor Martínez-Cagigal and Ana Martín-Fernández and Eduardo Santamaría-Vázquez and Roberto Hornero},
+	journal = {Biocybernetics and Biomedical Engineering},
+	volume = {45},
+	number = {3},
+	pages = {528-538},
+	year = {2025},
+	doi = {10.1016/j.bbe.2025.06.003},
+	url = {https://doi.org/10.1016/j.bbe.2025.06.003},
+}
+
 @inproceedings{nagel2017,
 title={Random visual evoked potentials ({rVEP}) for brain-computer interface ({BCI}) control},
 author={Nagel, Sebastian and Rosenstiel, Wolfgang and Sp{\"u}ler, Martin},
