--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -93,6 +93,7 @@
 		\citeauthor{martinfernandez2025} & article & m-sequence & \acrshort{cca} & stimulus opacity \\
 		\citeauthor{martinezcagigal2025a} & article &  &  & Editorial \acrshort{cvep} \\
 		\citeauthor{martinezcagigal2025b} & proceedings &  m-sequence & \acrshort{cca} & asynchronous, early stopping \\
+		\citeauthor{moreno2025} & article & m-sequence & \acrshort{cca} & mixed reality versus screen \\
 		\citeauthor{santamaria2025} & proceedings & & & calibration-free, deep learning \\
 		\citeauthor{tangermann2025} & article & & & review learning from small datasets \\
 		\citeauthor{thielen2025a} & article & modulated Gold codes & reconvolution, \acrshort{cca} & implanted, invasive, \acrshort{seeg} \\
