add yu et al. 2025

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -1752,6 +1752,17 @@ doi = {10.1038/s41598-022-14026-y},
 url = {https://doi.org/10.1038/s41598-022-14026-y}
 }
 
+@article{yu2025,
+title={{ArmBCIsys}: Robot Arm BCI System With Time--Frequency Network for Multiobject Grasping},
+author={Yu, Feng and Rao, Zhongrui and Chen, Neng and Liu, Li and Jiang, Minghua},
+journal={IEEE Transactions on Neural Networks and Learning Systems},
+year={2025},
+publisher={IEEE},
+pages={1--15}
+url={https://doi.org/10.1109/TNNLS.2025.3579332},
+doi={10.1109/TNNLS.2025.3579332},
+}
+
 @article{zarei2022a,
 title={Classification of code-modulated visual evoked potentials using adaptive modified covariance beamformer and {EEG} signals},
 author={Zarei, Asghar and Asl, Babak Mohammadzadeh},
