add zheng et al. 2025

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -1845,3 +1845,12 @@ publisher={Taylor \& Francis},
 doi={10.1080/27706710.2024.2383860},
 url={https://doi.org/10.1080/27706710.2024.2383860}
 }
+
+@article{zheng2025,
+title={Implementing a Calibration-Free Bci with a Large Instruction Set of 504 Targets},
+author={Zheng, Li and Dong, Yida and Pei, Weihua and Gao, Xiaorong and Wang, Yijun},
+journal={Available at SSRN 5205963},
+year={2025},
+url={http://doi.org/10.2139/ssrn.5205963},
+doi={10.2139/ssrn.5205963}
+}
