--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -100,6 +100,7 @@
 		\citeauthor{thielen2025b} & article & m-sequence, de Bruijn sequence, Golay sequence, Gold sequence, Gold code set, modulated & reconvolution, \acrshort{cca} & BCI inefficiency, performance predictors, binary stimulus sequences \\
 		\citeauthor{thielen2025dataset} & dataset & m-sequence, de Bruijn sequence, Golay sequence, Gold sequence, Gold code set, modulated & & binary stimulus sequences, \acrshort{eeg}, \acrshort{ecg}, \acrshort{sart}, resting-state \\
 		\citeauthor{yu2025} & article & Gold code & DBFENet, EEGNet, etc. & Robot arm, scene segmentation, deep learning \\
+		\citeauthor{zheng2025} & preprint & \acrshort{nbrs} & \acrshort{fbcca} & calibration-free, 504 targets \\
 		\bottomrule
 	\end{tabular}
 \end{table}
