--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -1510,7 +1510,7 @@ title={{Addressing BCI inefficiency in c-VEP-based BCIs: A comprehensive study o
 author={Thielen, Jordy},
 journal={Biomedical Physics \& Engineering Express},
 year={2025},
-doi={10.1088/2057-1976/ade316}
+doi={10.1088/2057-1976/ade316},
 url={https://doi.org/10.1088/2057-1976/ade316}
 }
 
