--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -133,7 +133,7 @@ author={Ba{\c{s}}aklar, Toygun and Tuncel, Yi{\u{g}}it and {\.I}der, Yusuf Ziya}
 journal={Biomedical Physics \& Engineering Express},
 year={2019},
 volume={5},
-pages={035023}
+pages={035023},
 publisher={IOP Publishing},
 doi = {10.1088/2057-1976/ab0cee},
 url = {https://doi.org/10.1088/2057-1976/ab0cee}
