--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -146,7 +146,7 @@ journal={IEEE Transactions on Neural Systems and Rehabilitation Engineering},
 year={2020},
 volume={28},
 number={12},
-pages={2762--2772}
+pages={2762--2772},
 publisher={IEEE},
 doi = {10.1109/TNSRE.2020.3044947},
 url = {https://doi.org/10.1109/TNSRE.2020.3044947}
