--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -217,7 +217,7 @@ title={A novel {ChatGPT}-driven communication aid based on code-modulated visual
 author={Atilla Cantürk and Ivan Volosyak},
 booktitle={9th Graz Brain-Computer Interface Conference 2024},
 year={2024},
-pages={41--46}
+pages={41--46},
 doi = {10.3217/978-3-99161-014-4-008},
 url = {https://doi.org/10.3217/978-3-99161-014-4-008}
 }
