--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -719,7 +719,7 @@ author={Lai, En and Mai, Ximing and Ji, Minghao and Li, Songwei and Meng, Jianju
 journal={IEEE Journal of Biomedical and Health Informatics},
 volume={28},
 number={5},
-pages={2769--2780}
+pages={2769--2780},
 year={2024},
 publisher={IEEE},
 doi = {10.1109/BIBM58861.2023.10385977},
