--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -793,7 +793,7 @@ volume={232},
 pages={120815},
 year={2023},
 publisher={Elsevier},
-doi=10.1016/j.eswa.2023.120815},
+doi={10.1016/j.eswa.2023.120815},
 url={https://doi.org/10.1016/j.eswa.2023.120815}
 }
 
