--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -816,7 +816,7 @@ title={Assessing calibration durations for {c-VEP}-based {BCIs}: Insights from n
 author={Víctor Martínez-Cagigal and Álvaro Fernández-Rodríguez and Eduardo Santamaría-Vázquez and Ana Martín-Fernández and Roberto Hornero},
 booktitle={{9th Graz Brain-Computer Interface Conference 2024}},
 year={2024},
-pages={230--235}
+pages={230--235},
 doi={10.3217/978-3-99161-014-4-041},
 url={https://doi.org/10.3217/978-3-99161-014-4-041}
 }
