--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -1196,7 +1196,7 @@ title={Towards auditory attention decoding with noise-tagging: A pilot study},
 author={Scheppink, HA and Ahmadi, S and Desain, P and Tangermann, M and Thielen, J},
 booktitle={{9th Graz Brain-Computer Interface Conference 2024}},
 year={2024},
-pages={337--342}
+pages={337--342},
 doi={10.3217/978-3-99161-014-4-059},
 url={https://doi.org/10.3217/978-3-99161-014-4-059}
 }
