--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -1758,7 +1758,7 @@ author={Yu, Feng and Rao, Zhongrui and Chen, Neng and Liu, Li and Jiang, Minghua
 journal={IEEE Transactions on Neural Networks and Learning Systems},
 year={2025},
 publisher={IEEE},
-pages={1--15}
+pages={1--15},
 url={https://doi.org/10.1109/TNNLS.2025.3579332},
 doi={10.1109/TNNLS.2025.3579332},
 }
