update recent literature

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -402,6 +402,17 @@ doi={10.3390/brainsci15060549},
 url={https://doi.org/10.3390/brainsci15060549}
 }
 
+@inproceedings{fodor2025c,
+title={Graph-Attentive {CNN} for {cVEP-BCI} with Insights into Electrode Significance},
+author={Fodor, Mil{\'a}n Andr{\'a}s and Volosyak, Ivan},
+booktitle={International Work-Conference on Artificial Neural Networks},
+pages={558--571},
+year={2025},
+organization={Springer},
+doi={0.1007/978-3-032-02728-3_45},
+url={https://doi.org/10.1007/978-3-032-02728-3_45},
+}
+
 @inproceedings{gembler2018a,
 title={A Dictionary Driven Mental Typewriter Based on Code-Modulated Visual Evoked Potentials ({cVEP})},
 author={Gembler, Felix and Stawicki, Piotr and Saboor, Abdul and Benda, Mihaly and Grichnik, Roland and Rezeika, Aya and Volosyak, Ivan},
@@ -511,6 +522,15 @@ year={2020},
 organization={IEEE},
 doi={10.1109/SMC42975.2020.9282826},
 url={https://doi.org/10.1109/SMC42975.2020.9282826}
+}
+
+@inproceedings{gomel2025,
+title={Star-Burst paradigm: implementation of an “invisible” dry-{EEG} reactive {BCI}},
+author={Jules, Gomel and Jesus, Torre Tresols Juan and Cimarosto, Pietro and Castillo, Cabrera and Fr{\'e}d{\'e}ric, Dehais and others},
+booktitle={1th International Brain-Computer Interface Meeting 2025},
+year={2025},
+doi={},
+url={https://hal.science/hal-05300721/}
 }
 
 @article{grigoryan2019,
@@ -689,6 +709,17 @@ doi={10.1007/978-3-030-54564-2_7},
 url={https://doi.org/10.1007/978-3-030-54564-2_7}
 }
 
+@inproceedings{kiser2025,
+title={Towards Secure Transaction Authentication Using a {cVEP}-Based {BCI}},
+author={Kiser, Ayas and Cant{\"u}rk, Atilla and Volosyak, Ivan},
+booktitle={International Work-Conference on Artificial Neural Networks},
+pages={533--547},
+year={2025},
+organization={Springer},
+doi={10.1007/978-3-032-02728-3_43},
+url={https://doi.org/10.1007/978-3-032-02728-3_43}
+}
+
 @article{lai2011,
 title={A chromatic transient visual evoked potential based encoding/decoding approach for brain--computer interface},
 author={Lai, Sui Man and Zhang, Zhiguo and Hung, Yeung Sam and Niu, Zhendong and Chang, Chunqi},
@@ -761,7 +792,7 @@ doi = {10.1109/CAC48633.2019.8996478},
 url = {https://doi.org/10.1109/CAC48633.2019.8996478}
 }
 
-@article{martinfernandez2025,
+@article{martinfernandez2025a,
 title={Enhancing user experience in c-{VEP}-based {BCI}: Effects of visual stimulus opacity on performance and visual fatigue},
 author={Mart{\'\i}n-Fern{\'a}ndez, Ana and Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Moreno-Calder{\'o}n, Selene and Santamar{\'\i}a-V{\'a}zquez, Eduardo and Hornero, Roberto},
 journal={Biomedical Signal Processing and Control},
@@ -771,6 +802,17 @@ year={2025},
 publisher={Elsevier},
 doi={10.1016/j.bspc.2025.107894},
 url={https://doi.org/10.1016/j.bspc.2025.107894},
+}
+
+@inproceedings{martinfernandez2025b,
+title={Exploring Code-Modulated Visual Evoked Potentials Spellers in Realistic Scenarios},
+author={Mart{\'\i}n-Fern{\'a}ndez, Ana and Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Moreno-Calder{\'o}n, Selene and Santamar{\'\i}a-V{\'a}zquez, Eduardo and Pascual-Roa, Beatriz and Hornero, Roberto},
+booktitle={International Work-Conference on Artificial Neural Networks},
+pages={521--532},
+year={2025},
+organization={Springer},
+doi={10.1007/978-3-032-02728-3_42},
+url={https://doi.org/10.1007/978-3-032-02728-3_42}
 }
 
 @article{martinezcagigal2021,
@@ -846,6 +888,19 @@ doi={10.1007/978-3-031-77588-8_135},
 url={https://doi.org/10.1007/978-3-031-77588-8_135}
 }
 
+@article{martinezcagigal2025c,
+title={Reevaluating performance in {c-VEP} {BCIs}: The impact of calibration time},
+author={Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Santamar{\'\i}a-V{\'a}zquez, Eduardo and P{\'e}rez-Velasco, Sergio and Mart{\'\i}n-Fern{\'a}ndez, Ana and Hornero, Roberto},
+journal={Biocybernetics and Biomedical Engineering},
+volume={45},
+number={4},
+pages={685--696},
+year={2025},
+publisher={Elsevier},
+doi={10.1016/j.bbe.2025.10.006},
+url={https://doi.org/10.1016/j.bbe.2025.10.006}
+}
+
 @inproceedings{matsuno2019,
 title={Examination of multi-optioning for {cVEP}-based {BCI} by fluctuation of indicator lighting intervals and luminance},
 author={Matsuno, Shogo and Itakura, Naoaki and Mizuno, Tota and Mito, Kazuyuki},
@@ -913,7 +968,7 @@ doi = {10.1109/IEMBS.2008.4649240},
 url = {https://doi.org/10.1109/IEMBS.2008.4649240}
 }
 
-@article{moreno2023,
+@article{morenocalderon2023,
 title={Combining brain-computer interfaces and multiplayer video games: an application based on {c-VEPs}},
 author={Moreno-Calder{\'o}n, Selene and Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Santamar{\'\i}a-V{\'a}zquez, Eduardo and P{\'e}rez-Velasco, Sergio and Marcos-Mart{\'\i}nez, Diego and Hornero, Roberto},
 journal={Frontiers in Human Neuroscience},
@@ -924,16 +979,27 @@ doi = {10.3389/fnhum.2023.1227727},
 url = {https://doi.org/10.3389/fnhum.2023.1227727}
 }
 
-@article{moreno2025,
-	title = {Toward the integration of mixed reality and brain-computer interfaces based on code-modulated visual evoked potentials},
-	author = {Selene Moreno-Calderón and Víctor Martínez-Cagigal and Ana Martín-Fernández and Eduardo Santamaría-Vázquez and Roberto Hornero},
-	journal = {Biocybernetics and Biomedical Engineering},
-	volume = {45},
-	number = {3},
-	pages = {528-538},
-	year = {2025},
-	doi = {10.1016/j.bbe.2025.06.003},
-	url = {https://doi.org/10.1016/j.bbe.2025.06.003},
+@article{morenocalderon2025a,
+title = {Toward the integration of mixed reality and brain-computer interfaces based on code-modulated visual evoked potentials},
+author = {Selene Moreno-Calderón and Víctor Martínez-Cagigal and Ana Martín-Fernández and Eduardo Santamaría-Vázquez and Roberto Hornero},
+journal = {Biocybernetics and Biomedical Engineering},
+volume = {45},
+number = {3},
+pages = {528-538},
+year = {2025},
+doi = {10.1016/j.bbe.2025.06.003},
+url = {https://doi.org/10.1016/j.bbe.2025.06.003},
+}
+
+@inproceedings{morenocalderon2025b,
+title={Exploring the Integration of {c-VEP}-Based {BCI} Spellers in Mixed Reality: A Pilot Study},
+author={Moreno-Calder{\'o}n, Selene and Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Mart{\'\i}n-Fern{\'a}ndez, Ana and Santamar{\'\i}a-V{\'a}zquez, Eduardo and Pascual-Roa, Beatriz and Hornero, Roberto},
+booktitle={International Work-Conference on Artificial Neural Networks},
+pages={584--594},
+year={2025},
+organization={Springer},
+doi={10.1007/978-3-032-02728-3_47},
+url={https://doi.org/10.1007/978-3-032-02728-3_47}
 }
 
 @inproceedings{nagel2017,
@@ -1011,6 +1077,15 @@ title={Towards a home-use {BCI}: fast asynchronous control and robust non-contro
 author={Nagel, Sebastian},
 year={2019},
 school={Universität Tübingen}
+}
+
+@article{nair2025,
+title={Deep Learning Architectures for Code-Modulated Visual Evoked Potentials Detection},
+author={Nair, Kiran and Cecotti, Hubert},
+journal={arXiv preprint arXiv:2511.21940},
+year={2025},
+doi={10.48550/arXiv.2511.21940},
+url={https://doi.org/10.48550/arXiv.2511.21940}
 }
 
 @inproceedings{nakanishi2012,
@@ -1199,6 +1274,17 @@ year={2024},
 pages={337--342},
 doi={10.3217/978-3-99161-014-4-059},
 url={https://doi.org/10.3217/978-3-99161-014-4-059}
+}
+
+@inproceedings{scheppink2025,
+title={{BCI} with Intuitive Object Control Based on Code-Modulated Visual Evoked Potentials},
+author={Scheppink, Hanneke A and Cant{\"u}rk, Atilla and Volosyak, Ivan},
+booktitle={International Work-Conference on Artificial Neural Networks},
+pages={572--583},
+year={2025},
+organization={Springer},
+doi={10.1007/978-3-032-02728-3_46},
+url={https://doi.org/10.1007/978-3-032-02728-3_46}
 }
 
 @article{shi2024,
