add vodila et al 2025

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -1684,6 +1684,17 @@ doi = {10.1016/j.clinph.2021.07.012},
 url = {https://doi.org/10.1016/j.clinph.2021.07.012}
 }
 
+@inproceedings{vodila2025,
+title={Toward a Gaze-Independent Brain-Computer Interface Using the Code-Modulated Visual Evoked Potentials},
+author={Vodila, Radovan and van Lohuizen, Juliette and Thielen, Jordy},
+booktitle={2025 IEEE 35th International Workshop on Machine Learning for Signal Processing (MLSP)},
+pages={1--6},
+year={2025},
+organization={IEEE},
+doi={10.1109/MLSP62443.2025.11204258},
+url={https://doi.org/10.1109/MLSP62443.2025.11204258}
+}
+
 @article{volosyak2020,
 title={Towards solving of the illiteracy phenomenon for {VEP}-based brain-computer interfaces},
 author={Volosyak, Ivan and Rezeika, Aya and Benda, Mihaly and Gembler, Felix and Stawicki, Piotr},
