--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -107,6 +107,7 @@
 	\citeauthor{thielen2025a} & article & modulated Gold codes & reconvolution, \acrshort{cca} & implanted, invasive, \acrshort{seeg} \\
 	\citeauthor{thielen2025b} & article & m-sequence, de Bruijn sequence, Golay sequence, Gold sequence, Gold code set, modulated & reconvolution, \acrshort{cca} & BCI inefficiency, performance predictors, binary stimulus sequences \\
 	\citeauthor{thielen2025dataset} & dataset & m-sequence, de Bruijn sequence, Golay sequence, Gold sequence, Gold code set, modulated & & binary stimulus sequences, \acrshort{eeg}, \acrshort{ecg}, \acrshort{sart}, resting-state \\
+	\citeauthor{vodila2025} & proceedings & modulated Gold codes & reconvolution \acrshort{cca} & gaze-independent, covert attention, alpha, ERP, c-VEP \\
 	\citeauthor{yu2025} & article & Gold code & DBFENet, EEGNet, etc. & Robot arm, scene segmentation, deep learning \\
 	\citeauthor{zheng2025} & preprint & \acrshort{nbrs} & \acrshort{fbcca} & calibration-free, 504 targets \\
 	\bottomrule
